--- a/blog.html
+++ b/blog.html
@@ -13,26 +13,13 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt=""></a>
 				<ul id="navigation">
 					<li>
 						<a href="index.html">Home</a>
 					</li>
-					<li class="menu">
-						<a href="about.html">About</a>
-						<ul class="primary">
-							<li class="">
-								<a href="product.html">Product</a>
-							</li>
-						</ul>
-					</li>
-					<li class="menu selected">
-						<a href="blog.html">Blog</a>
-						<ul class="secondary">
-							<li>
-								<a href="singlepost.html">Single post</a>
-							</li>
-						</ul>
+					<li>
+						<a href="blog.html">Order</a>
 					</li>
 					<li>
 						<a href="contact.html">Contact</a>
@@ -43,28 +30,36 @@
 		<div id="body">
 			<div class="header">
 				<div>
-					<h1>Blog</h1>
+					<h1>Contact</h1>
 				</div>
 			</div>
 			<div class="blog">
 				<div class="featured">
 					<ul>
 						<li>
-							<img src="images/new-chills.png" alt="">
+							<img src="images/satilal.jpeg" alt="">
 							<div>
-								<h1>NEW CHILLS FOR SUMMER</h1>
-								<span>By Admin on November 28, 2023</span>
-								<p>You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template.</p>
-								<a href="singlepost.html" class="more">Read More</a>
+								<h1>Satilal Patil</h1>
+								<br>
+								<p>Mobile No.- +91 9763738330<br>Whatsapp No.- +91 9763738330<br>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
 							</div>
 						</li>
+						
 						<li>
-							<img src="images/berries.png" alt="">
+							<img src="images/nitin.jpeg" alt="">
 							<div>
-								<h1>BERRIES ON THE GROVE</h1>
-								<span>By Admin on November 28, 2023</span>
-								<p>You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template.</p>
-								<a href="singlepost.html" class="more">Read More</a>
+								<h1>Nitin Patil</h1>
+								<br>
+								<p>Mobile No.- +91 7387863187<br>Whatsapp No.- +91 7387863187<br>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
+							</div>
+						</li>
+						
+						<li>
+							<img src="images/shivaji.jpeg" alt="">
+							<div>
+								<h1>Shivaji Patil</h1>
+								<br>
+								<p>Mobile No.- +91 8080261516<br>Whatsapp No.- +91 8080261516<br>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
 							</div>
 						</li>
 					</ul>
@@ -76,19 +71,19 @@
 					<h2>ON THE DIET</h2>
 					<span>By Admin on November 28, 2023</span>
 					<p>You can replace all this text with your own text. You can remove any link to our website from this website template.</p>
-					<a href="singlepost.html" class="more">Read More</a>
+					<a href="#" class="more">Read More</a>
 				</div>
 			</div>
 		</div>
 		<div id="footer">
 			<div>
 				<div class="connect">
-					<a href="http://freewebsitetemplates.com/go/facebook/" class="facebook">facebook</a>
-					<a href="http://freewebsitetemplates.com/go/twitter/" class="twitter">twitter</a>
-					<a href="http://freewebsitetemplates.com/go/googleplus/" class="googleplus">googleplus</a>
-					<a href="http://pinterest.com/fwtemplates/" class="pinterest">pinterest</a>
+					<a href="#" class="facebook">facebook</a>
+					<a href="#" class="twitter">twitter</a>
+					<a href="#" class="googleplus">googleplus</a>
+					<a href="#" class="pinterest">pinterest</a>
 				</div>
-				<p>&copy; 2023 Freeeze. All Rights Reserved.</p>
+				<p>&copy; 2020 All Rights Reserved.</p>
 			</div>
 		</div>
 	</div>
