--- a/product.html
+++ b/product.html
@@ -41,10 +41,8 @@
 			</div>
 		</div>
 		<div id="body">
-			<div class="header">
-				<div>
-					<h1>Products</h1>
-				</div>
+			<div class="body">
+				<img src="images/bg-header-about.jpg" alt="">
 			</div>
 			<div>
 				<ul>
