--- a/order.html
+++ b/order.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>blog - Frozen Yogurt Shop</title>
+	<title>Aai Ekvira Cake Shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -19,7 +19,7 @@
 						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="blog.html">Order</a>
+						<a href="order.html">Order</a>
 					</li>
 					<li>
 						<a href="contact.html">Contact</a>
@@ -42,6 +42,7 @@
 								<h1>Satilal Patil</h1>
 								<br>
 								<p>Mobile No.- +91 9763738330<br>Whatsapp No.- +91 9763738330<br>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
+								<a href="https://api.whatsapp.com/send?phone=+919763738330&text=Hi" class="more">Send Message</a>
 							</div>
 						</li>
 						
@@ -51,6 +52,7 @@
 								<h1>Nitin Patil</h1>
 								<br>
 								<p>Mobile No.- +91 7387863187<br>Whatsapp No.- +91 7387863187<br>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
+								<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Send Message</a>
 							</div>
 						</li>
 						
@@ -60,18 +62,17 @@
 								<h1>Shivaji Patil</h1>
 								<br>
 								<p>Mobile No.- +91 8080261516<br>Whatsapp No.- +91 8080261516<br>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
+								<a href="https://api.whatsapp.com/send?phone=+918080261516&text=Hi" class="more">Send Message</a>
 							</div>
 						</li>
 					</ul>
-					<a href="blog.html" class="load">Load More</a>
 				</div>
 				<div class="sidebar">
-					<h1>Recent Posts</h1>
-					<img src="images/on-diet.png" alt="">
-					<h2>ON THE DIET</h2>
-					<span>By Admin on November 28, 2023</span>
-					<p>You can replace all this text with your own text. You can remove any link to our website from this website template.</p>
-					<a href="#" class="more">Read More</a>
+					<h1>Pinaaple Cake</h1>
+					<img src="images/pinaaple-cake.jpg" alt="">
+					<h2>BEST HOMEMADE CAKES IN CHAUGOAN</h2>
+					<br>
+					<p>"We provide one of the best homemade cakes baked by conventional methods thus giving the cake it's true essence, yet with a unique touch and utmost care by following food safety guidelines. Birthday- egg and eggless - cakes, Plum rich with dry fruit cakes with or without alcohol also available by order. Orders has to be placed 2 days in prior. We also provide free delivery services."</p>
 				</div>
 			</div>
 		</div>
