--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>contact - Frozen Yogurt Shop</title>
+	<title>Aai Ekvira Cake Shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -19,7 +19,7 @@
 						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="blog.html">Order</a>
+						<a href="order.html">Order</a>
 					</li>
 					<li>
 						<a href="contact.html">Contact</a>
@@ -39,6 +39,7 @@
 						<img src="images/check-in.png" alt="">
 						<h1>Chaugoan Kh.</h1>
 						<p>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
+						<p>Mobile No. & Whatsapp No. +91 9763738330, +91 7387863187, +91 8080261516
 					</div>
 				</div>
 			</div>
