--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>product - Frozen Yogurt Shop</title>
+	<title>Aai Ekvira Cake Shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
+	<style>
+		.more {
+			border: 2px solid #d3c2c7;
+			color: #a5838e;
+			display: block;
+			font-family: lato-bold-webfont;
+			font-size: 16px;
+			font-weight: normal;
+			height: 36px;
+			line-height: 36px;
+			margin: 0 auto;
+			padding: 0;
+			text-align: center;
+			text-transform: uppercase;
+			width: 156px;
+		}
+	</style>
 </head>
 <body>
 	<div id="page">
@@ -19,7 +36,7 @@
 						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="blog.html">Order</a>
+						<a href="order.html">Order</a>
 					</li>
 					<li>
 						<a href="contact.html">Contact</a>
@@ -28,8 +45,13 @@
 			</div>
 		</div>
 		<div id="body">
+			<div class="header">
+				<div>
+					<h1>Cake Shop</h1>
+				</div>
+			</div>
 			<div class="body">
-				<img src="images/bg-header-about.jpg" alt="">
+				<img src="images/OE_Banner_2.1.jpg" alt="">
 			</div>
 			<div>
 				<ul>
@@ -39,15 +61,21 @@
 					</li>
 					<li>
 						<img src="images/kiwi.jpg" alt="">
-						<h2>Kiwi</h2>
+						<h2>Pinaaple Cake</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/mango.jpg" alt="">
 						<h2>Mango</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cantaloupe.jpg" alt="">
 						<h2>Cantaloupe</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
@@ -58,14 +86,20 @@
 					<li>
 						<img src="images/blackberry.jpg" alt="">
 						<h2>blackberry</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/strawberry.jpg" alt="">
 						<h2>Strawberry</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/blueberry.jpg" alt="">
 						<h2>BLUEBERRY</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
@@ -76,14 +110,20 @@
 					<li>
 						<img src="images/grapes.jpg" alt="">
 						<h2>Grapes</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/green-apple.jpg" alt="">
 						<h2>Green Apple</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/pineapple.jpg" alt="">
 						<h2>Pineapple</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
 					</li>
 				</ul>
 			</div>
