--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>contact - Frozen Yogurt Shop</title>
+	<title>aai ekvira cake shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -13,28 +13,15 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt=""></a>
 				<ul id="navigation">
 					<li>
 						<a href="index.html">Home</a>
 					</li>
-					<li class="menu">
-						<a href="about.html">About</a>
-						<ul class="primary">
-							<li>
-								<a href="product.html">Product</a>
-							</li>
-						</ul>
+					<li>
+						<a href="order.html">Order</a>
 					</li>
-					<li class="menu">
-						<a href="blog.html">Blog</a>
-						<ul class="secondary">
-							<li>
-								<a href="singlepost.html">Single post</a>
-							</li>
-						</ul>
-					</li>
-					<li class="selected">
+					<li>
 						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
@@ -50,37 +37,23 @@
 				<div>
 					<div>
 						<img src="images/check-in.png" alt="">
-						<h1>UNIT 0123 , ABC BUILDING, BUSSINESS PARK</h1>
-						<p>If you're having problems editing this website template, then don't hesitate to ask for help on the Forums.</p>
+						<h1>Chaugoan Kh.</h1>
+						<p>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
+						<p>Mobile No. & Whatsapp No. +91 9763738330, +91 7387863187, +91 8080261516
 					</div>
 				</div>
 			</div>
-			<div class="footer">
-				<div class="contact">
-					<h1>INQUIRY FORM</h1>
-					<form action="index.html">
-						<input type="text" name="Name" value="Name" onblur="this.value=!this.value?'Name':this.value;" onfocus="this.select()" onclick="this.value='';">
-						<input type="text" name="Email" value="Email" onblur="this.value=!this.value?'Email':this.value;" onfocus="this.select()" onclick="this.value='';">
-						<input type="text" name="Subject" value="Subject" onblur="this.value=!this.value?'Subject':this.value;" onfocus="this.select()" onclick="this.value='';">
-						<textarea name="meassage" cols="50" rows="7">Share your thoughts</textarea>
-						<input type="submit" value="Send" id="submit">
-					</form>
-				</div>
-				<div class="section">
-					<h1>WE’D LOVE TO HEAR FROM YOU.</h1>
-					<p>If you're having problems editing this website template, then don't hesitate to ask for help on the Forums.</p>
-				</div>
-			</div>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29740.471623111654!2d74.65189028499194!3d21.28891908222614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdf2376079835dd%3A0xa5d9de18b3afbfdb!2sChaugaon%20Kh.%2C%20Maharashtra%20425408!5e0!3m2!1sen!2sin!4v1608651730253!5m2!1sen!2sin" width="1400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 		</div>
 		<div id="footer">
 			<div>
 				<div class="connect">
-					<a href="http://freewebsitetemplates.com/go/facebook/" class="facebook">facebook</a>
-					<a href="http://freewebsitetemplates.com/go/twitter/" class="twitter">twitter</a>
-					<a href="http://freewebsitetemplates.com/go/googleplus/" class="googleplus">googleplus</a>
-					<a href="http://pinterest.com/fwtemplates/" class="pinterest">pinterest</a>
+					<a href="#" class="facebook">facebook</a>
+					<a href="#" class="twitter">twitter</a>
+					<a href="#" class="googleplus">googleplus</a>
+					<a href="#" class="pinterest">pinterest</a>
 				</div>
-				<p>&copy; 2023 Freeeze. All Rights Reserved.</p>
+				<p>&copy; 2020 All Rights Reserved.</p>
 			</div>
 		</div>
 	</div>
