--- a/index.html
+++ b/index.html
@@ -4,35 +4,39 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Frozen Yogurt Shop</title>
+	<title>aai ekvira cake shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
+	<style>
+		.more {
+			border: 2px solid #d3c2c7;
+			color: #a5838e;
+			display: block;
+			font-family: lato-bold-webfont;
+			font-size: 16px;
+			font-weight: normal;
+			height: 36px;
+			line-height: 36px;
+			margin: 0 auto;
+			padding: 0;
+			text-align: center;
+			text-transform: uppercase;
+			width: 156px;
+		}
+	</style>
 </head>
 <body>
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt=""></a>
 				<ul id="navigation">
-					<li class="selected">
+					<li>
 						<a href="index.html">Home</a>
 					</li>
-					<li class="menu">
-						<a href="about.html">About</a>
-						<ul class="primary">
-							<li>
-								<a href="product.html">Product</a>
-							</li>
-						</ul>
-					</li>
-					<li class="menu">
-						<a href="blog.html">Blog</a>
-						<ul class="secondary">
-							<li>
-								<a href="singlepost.html">Single post</a>
-							</li>
-						</ul>
+					<li>
+						<a href="order.html">Order</a>
 					</li>
 					<li>
 						<a href="contact.html">Contact</a>
@@ -40,55 +44,99 @@
 				</ul>
 			</div>
 		</div>
-		<div id="body" class="home">
+		<div id="body">
 			<div class="header">
-				<img src="images/bg-home.jpg" alt="">
 				<div>
-					<a href="product.html">Freeze Delight</a>
+					<h1>Cake Shop</h1>
 				</div>
 			</div>
 			<div class="body">
-				<div>
-					<div>
-						<h1>NEW PRODUCT</h1>
-						<h2>The Twist of Healthy Yogurt</h2>
-						<p>This website template has been designed by freewebsitetemplates.com for you, for free. You can replace all this text with your own text.</p>
-					</div>
-					<img src="images/yogurt.jpg" alt="">
-				</div>
+				<img src="images/OE_Banner_2.1.jpg" alt="">
 			</div>
-			<div class="footer">
-				<div>
-					<ul>
-						<li>
-							<a href="product.html" class="product"></a>
-							<h1>PRODUCTS</h1>
-						</li>
-						<li>
-							<a href="about.html" class="about"></a>
-							<h1>OUR STORY</h1>
-						</li>
-						<li>
-							<a href="product.html" class="flavor"></a>
-							<h1>FLAVORS</h1>
-						</li>
-						<li>
-							<a href="contact.html" class="contact"></a>
-							<h1>OUR LOCATION</h1>
-						</li>
-					</ul>
-				</div>
+			<div>
+				<ul>
+					<li>
+						<h1>All Time Classic</h1>
+						<p>This website template has been designed by freewebsitetemplates.com for you, for free.</p>
+					</li>
+					<li>
+						<img src="images/kiwi.jpg" alt="">
+						<h2>Pinaaple Cake</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/mango.jpg" alt="">
+						<h2>Mango</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cantaloupe.jpg" alt="">
+						<h2>Cantaloupe</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<h1>Berry Special</h1>
+						<p>This website template has been designed by freewebsitetemplates.com for you, for free.</p>
+					</li>
+					<li>
+						<img src="images/blackberry.jpg" alt="">
+						<h2>blackberry</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/strawberry.jpg" alt="">
+						<h2>Strawberry</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/blueberry.jpg" alt="">
+						<h2>BLUEBERRY</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<h1>Fruit Blast</h1>
+						<p>This website template has been designed by freewebsitetemplates.com for you, for free.</p>
+					</li>
+					<li>
+						<img src="images/grapes.jpg" alt="">
+						<h2>Grapes</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/green-apple.jpg" alt="">
+						<h2>Green Apple</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/pineapple.jpg" alt="">
+						<h2>Pineapple</h2>
+						<center><strong>Rs. 350</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 		<div id="footer">
 			<div>
 				<div class="connect">
-					<a href="http://freewebsitetemplates.com/go/facebook/" class="facebook">facebook</a>
-					<a href="http://freewebsitetemplates.com/go/twitter/" class="twitter">twitter</a>
-					<a href="http://freewebsitetemplates.com/go/googleplus/" class="googleplus">googleplus</a>
-					<a href="http://pinterest.com/fwtemplates/" class="pinterest">pinterest</a>
+					<a href="#" class="facebook">facebook</a>
+					<a href="#" class="twitter">twitter</a>
+					<a href="#" class="googleplus">googleplus</a>
+					<a href="#" class="pinterest">pinterest</a>
 				</div>
-				<p>&copy; 2023 Freeeze. All Rights Reserved.</p>
+				<p>&copy; 2020 All Rights Reserved.</p>
 			</div>
 		</div>
 	</div>
