--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 						<a href="order.html">Order</a>
 					</li>
 					<li>
+						<a href="about.html">About</a>
+					</li>
+					<li>
 						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
@@ -56,73 +59,183 @@
 			<div>
 				<ul>
 					<li>
-						<h1>All Time Classic</h1>
-						<p>This website template has been designed by freewebsitetemplates.com for you, for free.</p>
-					</li>
-					<li>
-						<img src="images/kiwi.jpg" alt="">
+						<img src="images/pinaaple-cake1.jpg" alt="">
 						<h2>Pinaaple Cake</h2>
+						<center><strong>Rs. 300</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/chocalate-cake.jpg" alt="">
+						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 350</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/mango.jpg" alt="">
-						<h2>Mango</h2>
-						<center><strong>Rs. 350</strong><center>
+						<img src="images/butter-scoch.jpg" alt="">
+						<h2>Butter Scoch</h2>
+						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cantaloupe.jpg" alt="">
-						<h2>Cantaloupe</h2>
-						<center><strong>Rs. 350</strong><center>
-						<a href="order.html" class="more">Order Now</a>
-					</li>
-				</ul>
-				<ul>
-					<li>
-						<h1>Berry Special</h1>
-						<p>This website template has been designed by freewebsitetemplates.com for you, for free.</p>
-					</li>
-					<li>
-						<img src="images/blackberry.jpg" alt="">
-						<h2>blackberry</h2>
-						<center><strong>Rs. 350</strong><center>
-						<a href="order.html" class="more">Order Now</a>
-					</li>
-					<li>
-						<img src="images/strawberry.jpg" alt="">
-						<h2>Strawberry</h2>
-						<center><strong>Rs. 350</strong><center>
-						<a href="order.html" class="more">Order Now</a>
-					</li>
-					<li>
-						<img src="images/blueberry.jpg" alt="">
-						<h2>BLUEBERRY</h2>
-						<center><strong>Rs. 350</strong><center>
+						<img src="images/photo-cake.jpg" alt="">
+						<h2>Photo Cake</h2>
+						<center><strong>Rs. 800</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
 					<li>
-						<h1>Fruit Blast</h1>
-						<p>This website template has been designed by freewebsitetemplates.com for you, for free.</p>
-					</li>
-					<li>
-						<img src="images/grapes.jpg" alt="">
-						<h2>Grapes</h2>
+						<img src="images/black-forest-cake.jpg" alt="">
+						<h2>Black Forest Cake</h2>
 						<center><strong>Rs. 350</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/green-apple.jpg" alt="">
-						<h2>Green Apple</h2>
-						<center><strong>Rs. 350</strong><center>
+						<img src="images/white-forest-cake.jpg" alt="">
+						<h2>White Forest Cake</h2>
+						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/pineapple.jpg" alt="">
-						<h2>Pineapple</h2>
-						<center><strong>Rs. 350</strong><center>
+						<img src="images/doll-cake.jpg" alt="">
+						<h2>Doll Cake</h2>
+						<center><strong>Rs. 800</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/vanilla.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 300</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<img src="images/stoberry-cake.jpg" alt="">
+						<h2>Stoberry Cake</h2>
+						<center><strong>Rs. 300</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake3.jpg" alt="">
+						<h2>Chocalate Cake</h2>
+						<center><strong>Rs. 300</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake4.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 250</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake5.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 250</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<img src="images/cake6.jpg" alt="">
+						<h2>Chocalate Cake</h2>
+						<center><strong>Rs. 300</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake7.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 250</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake8.jpg" alt="">
+						<h2>Chocalate Cake</h2>
+						<center><strong>Rs. 300</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake9.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 250</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<img src="images/cake1.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 250</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake10.jpg" alt="">
+						<h2>Two Tier Cake</h2>
+						<center><strong>Rs. 650</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake11.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 250</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake12.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 300</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<img src="images/cake13.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 300</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake14.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 300</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake15.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 250</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake16.jpg" alt="">
+						<h2>Photo Cake</h2>
+						<center><strong>Rs. 800</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+				</ul>
+				<ul>
+					<li>
+						<img src="images/cake17.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 250</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake18.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 250</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake19.jpg" alt="">
+						<h2>Vanilla Cake</h2>
+						<center><strong>Rs. 250</strong><center>
+						<a href="order.html" class="more">Order Now</a>
+					</li>
+					<li>
+						<img src="images/cake20.jpg" alt="">
+						<h2>Chocalate Cake</h2>
+						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 				</ul>
