--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>about - Frozen Yogurt Shop</title>
+	<title>aai ekvira cake shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -13,26 +13,16 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt=""></a>
 				<ul id="navigation">
 					<li>
 						<a href="index.html">Home</a>
 					</li>
-					<li class="menu selected">
-						<a href="about.html">About</a>
-						<ul class="primary">
-							<li>
-								<a href="product.html">Product</a>
-							</li>
-						</ul>
+					<li>
+						<a href="order.html">Order</a>
 					</li>
-					<li class="menu">
-						<a href="blog.html">Blog</a>
-						<ul class="secondary">
-							<li>
-								<a href="singlepost.html">Single post</a>
-							</li>
-						</ul>
+					<li>
+						<a href="about.html">About</a>
 					</li>
 					<li>
 						<a href="contact.html">Contact</a>
@@ -46,25 +36,39 @@
 					<h1>About</h1>
 				</div>
 			</div>
-			<div class="body">
-				<img src="images/bg-header-about.jpg" alt="">
+			<div class="body ab">
+				<img src="images/OE_Banner_2.1.jpg" alt="">
 			</div>
 			<div class="footer">
 				<div class="sidebar">
-					<h1>Be Part of Our Community</h1>
-					<p>If you’re experiencing issues or having concerns about this website template, join the discussion <a href="http://www.freewebsitetemplates.com/forums/">on our forum</a> and meet other people in the community who share the same interests.</p>
+					<h1 style="line-height: 27px;padding: 0 0 20px;">BEST HOMEMADE CAKES IN CHAUGOAN</h1>
+					<p style="line-height: 20px;">"We provide one of the best homemade cakes baked by conventional methods thus giving the cake it's true essence, yet with a unique touch and utmost care by following food safety guidelines. Birthday- egg and eggless - cakes, Plum rich with dry fruit cakes with or without alcohol also available by order. Orders has to be placed 2 days in prior. We also provide free delivery services."</p>
 				</div>
 				<div class="article">
-					<h1>We Have Free Templates For Everyone</h1>
-					<p>Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them.</p>
-					<p>You can use them to design websites for clients, so long as you agree with the <a href="http://www.freewebsitetemplates.com/about/terms/">Terms of Use</a>. You can even remove all our links if you want to.</p>
-					<h1>We Have More Templates For You</h1>
-					<p>Looking for more templates? Just browse through all our <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>. But if you can’t find any website templates you can use, try our <a href="http://www.freewebsitetemplates.com/freewebdesign/">Free Web Design</a> service and tell us all about it. We love a good challenge!</p>
-					<h1>Template Details</h1>
-					<span>Design Version 2.</span>
-					<span>Code Version 1.</span>
-					<p>Website Template details, discussion and updates for this <a href="http://www.freewebsitetemplates.com/discuss/frozenyogurtshop/">Frozen Yogurt Shop Website Template</a>.</p>
-					<p>Website Template design by  <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a>.</p>
+					<h1>We Have Provide Best Home Made Cakes</h1>
+					<ul>
+					<li>
+						<img src="images/nitin.jpeg" alt="">
+						<h2>Nitin Patil</h2>
+						<center><p>The journey of a thousand miles begins with one step.</p></center>
+					</li>
+					
+					<li>
+						<img src="images/varsha.jpeg" alt="">
+						<h2>Varsha Patil</h2>
+						<center><p>The journey of a thousand miles begins with one step.</p></center>
+					</li>
+					<li>
+						<img src="images/shivaji.jpeg" alt="">
+						<h2>Shivaji Patil</h2>
+						<center><p>The journey of a thousand miles begins with one step.</p></center>
+					</li>
+					<li>
+						<img src="images/shivaji.jpeg" alt="">
+						<h2>Ashvini Patil</h2>
+						<center><p>The journey of a thousand miles begins with one step.</p></center>
+					</li>
+				</ul>
 				</div>
 			</div>
 		</div>
