--- a/order.html
+++ b/order.html
@@ -22,6 +22,9 @@
 						<a href="order.html">Order</a>
 					</li>
 					<li>
+						<a href="about.html">About</a>
+					</li>
+					<li>
 						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
