--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 				<img src="images/OE_Banner_2.1.jpg" alt="ekvira cake shop">
 			</div>
 			<div>
+				<center><h2 style="margin-top: 47px;color: red;">We Have Provide Best Home Made Cakes🎂</h2></center>
 				<ul>
 					<li>
 						<img src="images/pinaaple-cake1.jpg" alt="ekvira cake shop">
@@ -247,7 +248,7 @@
 		<div id="footer">
 			<div>
 				<div class="connect">
-					<a href="#" class="facebook">facebook</a>
+					<a href="https://www.facebook.com/nitinpatil.patil.14" class="facebook">facebook</a>
 					<a href="#" class="twitter">twitter</a>
 					<a href="#" class="googleplus">googleplus</a>
 					<a href="#" class="pinterest">pinterest</a>
