--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 1. Pinaaple Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/Chocalate-cake.jpg" alt="ekvira cake shop">
+						<img src="images/chocalate-cake.jpg" alt="ekvira cake shop">
 						<h2>2. Chocolate Cake</h2>
 						<center><strong>Rs. 350</strong><center>
 						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 2. Chocolate Cake 🎂 Rs.350" class="more">Order Now</a>
