--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   	<meta name="keywords" content="ekvira cake shop">
   	<meta name="author" content="ekvira cake shop">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="twitter:image" content="http://www.ekviracakes.tk/images/pinaaple-cake1.jpg">
+	<meta name="image" content="http://www.ekviracakes.tk/images/pinaaple-cake1.jpg">
 	<title>Ekvira Cake Shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
