--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="ekvira cake shop">
+	<meta name="description" content="We Have Provide Best Home Made Cakes🎂">
   	<meta name="keywords" content="ekvira cake shop">
   	<meta name="author" content="ekvira cake shop">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
