--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="We Have Provide Best Home Made Cakes🎂">
-  	<meta name="keywords" content="ekvira cake shop">
+  	<meta name="keywords" content="We Have Provide Best Home Made Cakes🎂">
   	<meta name="author" content="ekvira cake shop">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="image" content="http://www.ekviracakes.tk/images/pinaaple-cake1.jpg">
