--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="We Have Provide Best Home Made Cakes🎂">
   	<meta name="keywords" content="We Have Provide Best Home Made Cakes🎂">
-  	<meta name="author" content="ekvira cake shop">
+  	<meta name="author" content="We Have Provide Best Home Made Cakes🎂">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="image" content="http://www.ekviracakes.tk/images/pinaaple-cake1.jpg">
-	<title>Ekvira Cake Shop</title>
+	<title>🎂Ekvira Cake Shop🎂</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
