--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="We Have Provide Best Home Made Cakes🎂">
-  	<meta name="keywords" content="We Have Provide Best Home Made Cakes🎂">
-  	<meta name="author" content="We Have Provide Best Home Made Cakes🎂">
+	<meta name="description" content="We have provide best home made cakes on Ekvira cakes shop🎂">
+  	<meta name="keywords" content="We have provide best home made cakes on Ekvira cakes shop🎂">
+  	<meta name="author" content="We have provide best home made cakes on Ekvira cakes shop🎂">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="image" content="http://www.ekviracakes.tk/images/pinaaple-cake1.jpg">
 	<title>🎂Ekvira Cake Shop🎂</title>
