--- a/order.html
+++ b/order.html
@@ -3,10 +3,11 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="ekvira cake shop">
-  	<meta name="keywords" content="ekvira cake shop">
-  	<meta name="author" content="ekvira cake shop">
+	<meta name="description" content="We have provide best home made cakes on Ekvira cakes shop🎂">
+  	<meta name="keywords" content="We have provide best home made cakes on Ekvira cakes shop🎂">
+  	<meta name="author" content="We have provide best home made cakes on Ekvira cakes shop🎂">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="image" content="http://www.ekviracakes.tk/images/pinaaple-cake1.jpg">
 	<title>Ekvira Cake Shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
