--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 		<div id="footer">
 			<div>
 				<div class="connect">
-					<a href="https://www.facebook.com/nitinpatil.patil.14" class="facebook">facebook</a>
+					<a href="https://www.facebook.com/ekviracakes.tk" class="facebook">facebook</a>
 					<a href="#" class="twitter">twitter</a>
 					<a href="#" class="googleplus">googleplus</a>
 					<a href="#" class="pinterest">pinterest</a>
